--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,5 @@
 name: fyro_invoicing
-description: "A new Flutte  # Printing
-  printing: ^5.13.2
-  pdf: ^3.11.1
-
-  # Date formatting
-  intl: ^0.19.0
-  
-  # HTML for thermal printer formatting
-  universal_html: ^2.2.4ect."
+description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
