--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,11 @@ dependencies:
   # Excel export
   excel: ^4.0.6
 
+  # Firebase
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
