--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,25 @@ dev_dependencies:
   hive_generator: ^2.0.1
   build_runner: ^2.4.13
 
+  # App icon generator
+  flutter_launcher_icons: ^0.13.1
+
+# Flutter Launcher Icons configuration
+flutter_launcher_icons:
+  android: true
+  ios: true
+  web:
+    generate: true
+  windows:
+    generate: true
+  macos:
+    generate: true
+  linux:
+    generate: true
+  image_path: "images/logo.png"
+  adaptive_icon_background: "#1A1A1A"  # Your app's primary black color
+  adaptive_icon_foreground: "images/logo.png"
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
